--- a/sass/gutenberg/_blocks.scss
+++ b/sass/gutenberg/_blocks.scss
@@ -1,4 +1,5 @@
 @use "sass:meta";
+
 // List of all blocks: https://wordpress.org/support/article/blocks/
 // Core blocks only meant for article content
 .editor-styles-wrapper,
@@ -14,7 +15,7 @@
   @include meta.load-css('gutenberg/blocks/core-pullquote');
   @include meta.load-css('gutenberg/blocks/core-table');
   @include meta.load-css('gutenberg/blocks/core-video');
-  
+
   // Custom Gutenberg block styles
   @include meta.load-css('gutenberg/blocks/boxed');
   @include meta.load-css('gutenberg/blocks/button-file');
@@ -32,4 +33,5 @@
 
   // ACF blocks
   @include meta.load-css('gutenberg/blocks/hero');
+  @include meta.load-css('gutenberg/blocks/ctas');
 }
