--- a/sass/layout/_site-footer.scss
+++ b/sass/layout/_site-footer.scss
@@ -14,46 +14,50 @@
   padding: 3.75rem 1.25rem;
   display: flex;
   justify-content: center;
-  .footer-container{
+
+  .footer-container {
     display: flex;
     gap: 200px;
     justify-content: space-between;
     align-items: center;
     width: 1400px;
+
     .footer-site-branding {
-      background-color: #333;
       width: 245.714px;
       height: 40px;
       text-align: center;
+
       // Remover esse codigo assim que funcionar a cor da imagem
       .footer-logo {
         border-radius: 10px;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
       }
     }
-    
 
 
-    .main-area{
+
+    .main-area {
       display: flex;
       flex: 1;
       max-width: 84.1rem;
       align-items: flex-start;
       justify-content: space-between;
-      .footer-column{
+
+      .footer-column {
         display: flex;
         flex-direction: column;
-        gap: 84px;
-        h2{
+        gap: 45px;
+
+        h2 {
           color: var(--color-science-blue);
           font-family: 'Faktum', sans-serif;
           font-size: 20px;
-          font-weight: 500;
+          font-weight: var(--typography-weight-medium);
           line-height: 28.89px;
           letter-spacing: -0.6px;
           margin: 0;
         }
-        
+
         .footer-menu {
           display: flex;
           flex-direction: column;
@@ -61,10 +65,10 @@
           padding: 0;
           margin: 0;
           gap: 16px;
-        
+
           li {
             display: inline-block;
-        
+
             a {
               color: var(--cinza-medio-900);
               font-family: "Faktum", sans-serif;
@@ -78,26 +82,30 @@
               padding: 0;
 
               &:hover {
-                color: red;
+                text-decoration: underline;
               }
-              .external-link-icon, .is-external-link{
+
+              .external-link-icon,
+              .is-external-link {
                 display: none;
               }
             }
           }
         }
 
-        .footer-contact{
+        .footer-contact {
           display: flex;
           flex-direction: column;
           gap: 89px;
           margin: 0;
-          .phone-email{
+
+          .phone-email {
             display: flex;
             flex-direction: column;
             gap: 23px;
             margin: 0;
-            p{
+
+            p {
               color: var(--PRETO-40, rgba(0, 0, 0, 0.40));
               font-family: "Faktum", sans-serif;
               font-size: 20px;
@@ -106,17 +114,21 @@
               margin: 0;
             }
           }
-          .redes-sociais{
+
+          .redes-sociais {
             display: flex;
             gap: 16px;
             margin: 0 auto;
             padding: 0;
-            li{
+
+            li {
               list-style-type: none;
               cursor: pointer;
-              a{
+
+              a {
                 list-style-type: none;
-                .external-link-icon{
+
+                .external-link-icon {
                   display: none;
                 }
               }
