--- a/sass/gutenberg/blocks/_ctas.scss
+++ b/sass/gutenberg/blocks/_ctas.scss
@@ -9,6 +9,7 @@
   background-color: var(--color-white);
   border: solid 4px var(--color-black);
   float: left;
+  box-sizing: border-box;
 }
 
 .wp-block-acf-cta-1-3,
