--- a/css/dev/global.css
+++ b/css/dev/global.css
@@ -6004,6 +6004,7 @@ a.page-numbers:focus,a.page-numbers:hover {
   background-color: var(--color-white);
   border: 4px solid var(--color-black);
   float: left;
+  box-sizing: border-box;
 }
 .editor-styles-wrapper .wp-block-acf-cta-1-3,
 .editor-styles-wrapper .wp-block-acf-revista,
