--- a/sass/navigation/_nav-click-mobile.scss
+++ b/sass/navigation/_nav-click-mobile.scss
@@ -19,6 +19,7 @@
     justify-content: space-between;
     text-align: initial;
     width: 100%;
+    margin-top: 10px;
   }
 
   .menu-item-clickable::after {
