--- a/sass/layout/_site-footer.scss
+++ b/sass/layout/_site-footer.scss
@@ -69,8 +69,23 @@
               transition: color 0.3s ease-in-out;
               margin: 0;
               padding: 0;
+              position: relative;
               &:hover {
-                color: red;
+                color: var(--cinza-medio-900);
+              }
+              &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: -2px; 
+                width: 0%;
+                height: 2px;
+                background-color: currentColor; 
+                transition: width 0.3s ease-in-out;
+              }
+
+              &:hover::after {
+                width: 100%;
               }
               .external-link-icon, .is-external-link{
                 display: none;
@@ -186,4 +201,3 @@
   }
   
 }
-
