--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -55,6 +55,7 @@ body:not(.wp-admin) {
   max-width: 100%;
   overflow: hidden;
   position: relative;
+  background-color: var(--cinza-clarinho);
 }
 
 // Containers
