--- a/css/dev/gutenberg-editor-styles.css
+++ b/css/dev/gutenberg-editor-styles.css
@@ -48,7 +48,8 @@ img {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -352,7 +353,7 @@ textarea:focus {
   cursor: pointer;
   display: inline-block;
   font-family: var(--typography-family-paragraph);
-  font-size: var(--typography-size-16);
+  font-size: var(--typography-size-14);
   font-weight: var(--typography-weight-semibold);
   line-height: 1.39;
   margin-bottom: 0;
@@ -365,6 +366,7 @@ textarea:focus {
   transition: all 150ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   white-space: nowrap;
   width: auto;
+  text-align: center;
 }
 
 .wp-block .acf-block-preview .button.focus,
@@ -388,8 +390,7 @@ textarea:focus {
 .wp-block .acf-block-preview input[type=button].button-small,
 .wp-block .acf-block-preview input[type=reset].button-small,
 .wp-block .acf-block-preview input[type=submit].button-small {
-  font-size: var(--typography-size-16);
-  line-height: 20.9091px;
+  font-size: var(--typography-size-14);
   padding: calc(10px - var(--border-width-input-field)*2) calc(21px - var(--border-width-input-field)*2);
 }
 
@@ -458,7 +459,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -725,7 +727,7 @@ textarea:focus {
   cursor: pointer;
   display: inline-block;
   font-family: var(--typography-family-paragraph);
-  font-size: var(--typography-size-16);
+  font-size: var(--typography-size-14);
   font-weight: var(--typography-weight-semibold);
   line-height: 1.39;
   margin-bottom: 0;
@@ -738,6 +740,7 @@ textarea:focus {
   transition: all 150ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   white-space: nowrap;
   width: auto;
+  text-align: center;
 }
 
 .article-content .wp-block-button__link.focus,
@@ -763,7 +766,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -1212,7 +1216,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -1470,7 +1475,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -1758,7 +1764,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -1988,7 +1995,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -2241,7 +2249,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -2527,7 +2536,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -2758,7 +2768,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -2969,8 +2980,7 @@ textarea:focus {
 }
 
 .article-content .wp-block-file .wp-block-file__button,.editor-styles-wrapper .wp-block-file .wp-block-file__button {
-  font-size: var(--typography-size-16);
-  line-height: 20.9091px;
+  font-size: var(--typography-size-14);
   font-size: 0.8em;
   padding: 0.3em 0.8em;
 }
@@ -2990,7 +3000,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -3258,7 +3269,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -3495,7 +3507,8 @@ textarea:focus {
   --cinza-clarinho: #f2f2f2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
-  --cinza-medio-900: #0006;
+  --cinza-medio-600: #0006;
+  --cinza-medio-800: #00000080;
   --cinza-escurinho: #666;
   --cinza-escuro: #333;
   --color-main: var(--azul-leitura);
@@ -3750,6 +3763,7 @@ body:not(.wp-admin) {
   max-width: 100%;
   overflow: hidden;
   position: relative;
+  background-color: var(--cinza-clarinho);
 }
 
 .container {
@@ -4149,6 +4163,10 @@ p {
 }
 .editor-styles-wrapper body *[aria-invalid=true] {
   border-color: var(--color-error);
+  margin: 0;
+  padding: 0 30px;
+  display: flex;
+  justify-content: center; /* Centraliza tudo */
 }
 .editor-styles-wrapper .validation_message {
   color: var(--color-error);
@@ -4342,7 +4360,7 @@ p {
   cursor: pointer;
   display: inline-block;
   font-family: var(--typography-family-paragraph);
-  font-size: var(--typography-size-16);
+  font-size: var(--typography-size-14);
   font-weight: var(--typography-weight-semibold);
   line-height: 1.39;
   margin-bottom: 0;
@@ -4355,6 +4373,7 @@ p {
   transition: all 150ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   white-space: nowrap;
   width: auto;
+  text-align: center;
 }
 
 .editor-styles-wrapper .acf-block-preview .block .site-footer .button.focus,
@@ -4398,8 +4417,7 @@ p {
 .editor-styles-wrapper .acf-block-preview .block .site-main input[type=button].button-small,
 .editor-styles-wrapper .acf-block-preview .block .site-main input[type=reset].button-small,
 .editor-styles-wrapper .acf-block-preview .block .site-main input[type=submit].button-small {
-  font-size: var(--typography-size-16);
-  line-height: 20.9091px;
+  font-size: var(--typography-size-14);
   padding: calc(10px - var(--border-width-input-field)*2) calc(21px - var(--border-width-input-field)*2);
 }
 
