--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -10,7 +10,7 @@
   cursor: pointer;
   display: inline-block;
   font-family: var(--typography-family-paragraph);
-  font-size: var(--typography-size-16);
+  font-size: var(--typography-size-14);
   font-weight: var(--typography-weight-semibold);
   line-height: 1.39;
   margin-bottom: 0;
@@ -26,7 +26,7 @@
   transition: all animations.$transition-duration cubic-bezier(.25, .46, .45, .94);
   white-space: nowrap;
   width: auto;
-
+  text-align: center;
   &.focus,
   &:hover,
   &:focus {
