--- a/sass/features/_slider.scss
+++ b/sass/features/_slider.scss
@@ -13,6 +13,7 @@
   /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
   z-index: 1;
+  padding-top: 40px;
 }
 
 .owl-carousel .owl-stage {
@@ -33,14 +34,11 @@
   height: 0;
 }
 
-.owl-carousel .item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
 .owl-carousel .owl-stage-outer {
+
+  width: 100%;
+  max-width: 1400px;
+  height: 600px;
   position: relative;
   overflow: hidden;
   /* fix for flashing background */
