--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -5,5 +5,6 @@
 @forward 'layout/site-footer';
 @forward 'layout/forms';
 @forward 'layout/wordpress';
+@forward 'layout/home';
 
 /* layout/_index.scss */
