--- a/css/dev/global.css
+++ b/css/dev/global.css
@@ -1084,10 +1084,6 @@ body:not(.wp-admin) {
   }
 }
 
-.hide-completely {
-  display: none !important;
-}
-
 @media print {
   
   .side-nav,
@@ -1859,13 +1855,30 @@ input[type=radio]:focus,input[type=radio]:hover {
 }
 
 .newsletter-formulário {
-  padding-top: 300px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 180px;
+  gap: 50px;
   background-image: url(../../img/banner-newsletter-desktop.png);
-  background-position: 0 50%;
-  background-size: contain;
 }
 .newsletter-formulário .frm_submit.frm_flex ::before {
   display: none !important;
+}
+@media (max-width: 640px) {
+  .newsletter-formulário {
+    padding-top: 350px;
+    background-image: url(../../img/banner-newsletter-mobile.png);
+  }
+}
+
+.frm_forms {
+  background-color: var(--color-white);
+  padding: 60px;
+}
+@media (max-width: 640px) {
+  .frm_forms {
+    padding: 30px;
+  }
 }
 
 :root {
@@ -1986,7 +1999,6 @@ input[type=radio]:focus,input[type=radio]:hover {
   color: var(--cinza-medio-600);
   font-family: Faktum;
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
   text-transform: uppercase;
   background-color: #0000;
@@ -2027,6 +2039,7 @@ input[type=radio]:focus,input[type=radio]:hover {
   font-weight: 400;
   margin: 0;
   text-transform: uppercase;
+  text-align: left;
 }
 @media (max-width: 640px) {
   .publicacoes {
@@ -2070,6 +2083,7 @@ input[type=radio]:focus,input[type=radio]:hover {
   display: flex;
   width: 100%;
   max-width: 100%;
+  justify-content: center;
 }
 .cta-container .cta-image {
   width: 100%;
@@ -2108,7 +2122,7 @@ input[type=radio]:focus,input[type=radio]:hover {
   flex-direction: row;
   margin: 0 auto;
   background-color: var(--color-white);
-  padding: 44px;
+  padding: 35px;
   gap: 25px;
 }
 .revista-container .conteudo {
@@ -2233,7 +2247,6 @@ input[type=radio]:focus,input[type=radio]:hover {
   color: var(--cinza-medio-600);
   font-family: "Faktum", sans-serif;
   font-size: 12px;
-  font-style: normal;
   font-weight: 500;
   text-transform: uppercase;
   background-color: #0000;
@@ -2308,7 +2321,6 @@ input[type=radio]:focus,input[type=radio]:hover {
   }
 }
 
-/* Estilização da seção */
 .colunas-e-resenhas {
   display: flex;
   flex-direction: column;
@@ -2362,101 +2374,136 @@ input[type=radio]:focus,input[type=radio]:hover {
   gap: 40px;
 }
 .colunas-e-resenhas .resenhas-container .resenha-item {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
   background: #fff;
-  padding: 30px;
-  border-radius: 10px;
+  padding: 70px 70px 90px;
   box-shadow: 0 4px 6px #0000001a;
   text-align: center;
 }
-
-/* Imagem do livro */
-.resenha-thumbnail img {
-  width: 100%;
-  max-width: 150px;
-  height: auto;
-  margin-bottom: 20px;
+.colunas-e-resenhas .resenhas-container .resenha-item .info-livro {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
-
-/* Título do livro */
-.resenha-title {
-  font-size: 18px;
-  font-weight: 700;
+.colunas-e-resenhas .resenhas-container .resenha-item .info-livro .resenha-title {
+  color: var(--PRETO-80, #000c);
+  font-family: "Faktum", sans-serif;
+  font-size: 22px;
+  font-weight: 600;
   text-transform: uppercase;
-  margin-bottom: 5px;
+  margin: 0;
+  height: 66px;
 }
-
-/* Nome do autor */
-.resenha-autor {
-  font-size: 14px;
-  color: #004d8f;
+.colunas-e-resenhas .resenhas-container .resenha-item .info-livro .resenha-title a {
+  text-decoration: none;
+}
+.colunas-e-resenhas .resenhas-container .resenha-item .info-livro .resenha-autor {
+  color: var(--color-science-blue);
+  font-family: "Faktum", sans-serif;
+  font-size: 12px;
   font-weight: 500;
-  text-transform: uppercase;
-  margin-bottom: 15px;
+  line-height: 20px;
+  letter-spacing: -0.36px;
+  margin: 0;
 }
-
-/* Seção de autor */
-.autor-info {
+.colunas-e-resenhas .resenhas-container .resenha-item .resenha-thumbnail {
+  margin: 0;
+}
+.colunas-e-resenhas .resenhas-container .resenha-item .resenha-thumbnail img {
+  width: 100%;
+  max-width: 130px;
+  height: auto;
+}
+.colunas-e-resenhas .resenhas-container .resenha-item .autor-info {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 10px;
-  margin-bottom: 15px;
+  gap: 25px;
+  position: relative;
 }
-
-/* Foto do autor */
-.autor-foto {
-  width: 40px;
-  height: 40px;
+.colunas-e-resenhas .resenhas-container .resenha-item .autor-info .autor-foto {
+  width: 86px;
+  height: 86px;
   border-radius: 50%;
   object-fit: cover;
 }
-
-/* Nome do autor */
-.autor-nome {
-  font-size: 14px;
+.colunas-e-resenhas .resenhas-container .resenha-item .autor-info .autor-nome {
+  color: var(--color-science-blue);
+  font-family: "Faktum", sans-serif;
+  font-size: 12px;
   font-weight: 500;
+  line-height: 20px;
+  letter-spacing: -0.36px;
+  text-transform: uppercase;
+  margin: 0;
 }
-
-/* Citação */
-.resenha-citacao {
-  font-size: 16px;
-  font-style: italic;
-  color: #000000b3;
-  line-height: 1.5;
-  margin-bottom: 15px;
+.colunas-e-resenhas .resenhas-container .resenha-item .autor-info .aspas {
+  position: absolute;
+  top: 0;
 }
-
-/* Aspas na citação */
-.aspas {
+.colunas-e-resenhas .resenhas-container .resenha-item .resenha-citacao {
+  color: var(--PRETO-40, #0006);
+  font-family: "Faktum", sans-serif;
+  font-size: 21.104px;
+  font-weight: 400;
+  text-align: left;
+  line-height: 30.485px;
+  letter-spacing: -0.633px;
+}
+.colunas-e-resenhas .resenhas-container .resenha-item .resenha-citacao .aspas {
   font-size: 24px;
   color: #00000080;
 }
-
-/* Data */
-.resenha-data {
+.colunas-e-resenhas .resenhas-container .resenha-item .resenha-data {
+  color: var(--PRETO-40, #0006);
   font-size: 12px;
-  color: #00000080;
+  font-weight: 400;
+  margin: 0;
   text-transform: uppercase;
+  text-align: left;
+}
+@media (max-width: 640px) {
+  .colunas-e-resenhas {
+    padding: 0px 30px;
+    gap: 20px;
+  }
+  .colunas-e-resenhas .section-header .section-title {
+    font-size: 18px;
+  }
+  .colunas-e-resenhas .section-header .ver-todas {
+    display: none;
+  }
+  .colunas-e-resenhas .resenhas-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 340px;
+    gap: 20px;
+  }
+  .colunas-e-resenhas .resenhas-container .resenha-item {
+    padding: 55px;
+  }
+  .colunas-e-resenhas .resenhas-container .resenha-item .info-livro {
+    gap: 13px;
+  }
+  .colunas-e-resenhas .resenhas-container .resenha-item .info-livro .resenha-title {
+    font-size: 18px;
+    color: var(--PRETO-80, #000c);
+    height: 50px;
+  }
+  .colunas-e-resenhas .resenhas-container .resenha-item .resenha-thumbnail img {
+    width: 104.096px;
+    height: 161.639px;
+  }
+  .colunas-e-resenhas .resenhas-container .resenha-item .autor-info .autor-foto {
+    width: 68px;
+    height: 68px;
+  }
+  .colunas-e-resenhas .resenhas-container .resenha-item .resenha-citacao {
+    font-size: 16px;
+  }
 }
 
-/* Responsividade */
-@media (max-width: 1024px) {
-  .resenhas-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 768px) {
-  .resenhas-container {
-    grid-template-columns: 1fr;
-  }
-  .section-header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .ver-todas {
-    margin-top: 10px;
-  }
-}
 /* layout/_index.scss */
 .top {
   --color-background-top: #f5f5f5;
