--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -191,17 +191,35 @@ input[type="checkbox"]+label:focus {
   cursor: pointer;
 }
 
+
+
 // Esses valores são pensados para desktop.
 .newsletter-formulário {
-  padding-top: 300px; // <-- ----------------------------------------- Fazer esse valor relativo
+  display: flex;
+  flex-direction: column;
+  padding-top: 180px; // <-- ----------------------------------------- Fazer esse valor relativo
+  gap: 50px;
   background-image: url(../../img/banner-newsletter-desktop.png);
-  background-position: 0 50%;
-  background-size: contain;
+  // background-position: 0 50%;
+  // background-size: contain;
+  // object-fit: contain;
 
   .frm_submit.frm_flex {
     ::before {
       display: none !important;
       // não estou conseguindo tirar o before que está empurrando o botão de envio para baixo.
     }
+  }
+  @media (max-width: 640px) {
+    padding-top: 350px;
+    background-image: url(../../img/banner-newsletter-mobile.png);
+  }
+}
+
+.frm_forms{
+  background-color: var(--color-white);
+  padding: 60px;
+  @media (max-width: 640px) {
+    padding: 30px;
   }
 }
