--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -158,5 +158,5 @@ body:not(.wp-admin) {
 // stylelint-disable-next-line a11y/no-display-none
 .hide-completely {
   // stylelint-disable-next-line declaration-no-important
-  display: none !important;
+  // display: none !important;
 }
